--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,9 +13,11 @@
     <div class="pos-f-t">
       <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-dark p-4">
-          <span class="home"><a href="">Home</a></span>
-          <span class="about"><a href="">About Us</a></span>
-          <span class="news"><a href="">Newsletter</a></span>
+          <span class="home"><a href="home">Home</a></span>
+          <span class="about"><a href="about_us">About Us</a></span>
+          <span class="cookies"><a href="cookies">Cookies</a></span>
+          <span class="muffins"><a href="muffins">Muffins</a></span>
+          <span class="cupcakes"><a href="cupcakes">Cupcakes</a></span>
         </div>
       </div>
       <nav class="navbar navbar-dark bg-dark">
