added header image  to home pageand styled the navbar across all pages.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
 <section>
     <div class="pos-f-t">
       <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-dark p-4">
+        <div class="p-4">
           <span class="home"><a href="home">Home</a></span>
           <span class="about"><a href="about_us">About Us</a></span>
           <span class="cookies"><a href="cookies">Cookies</a></span>
@@ -20,8 +20,8 @@
           <span class="cupcakes"><a href="cupcakes">Cupcakes</a></span>
         </div>
       </div>
-      <nav class="navbar navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <nav id="nav" class="navbar navbar-dark">
+        <button id="menu-btn" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       </nav>
