--- a/public/main.css
+++ b/public/main.css
@@ -4,10 +4,24 @@
   text-decoration: none;
   margin-right: 5%;
   font-size: 25px;
+
+}
+
+#nav, #navbarToggleExternalContent{
+  background-color: #E8AD74;
+}
+
+#menu-btn {
+  background-color: #694E34;
+}
+
+a {
+  color: #fcfbfa;
 }
 
 a:hover {
   text-decoration: none;
+  color: #694E34;
 }
 
 /************************ Item Images ******************/
@@ -16,32 +30,49 @@ img {
   border-radius: 7px;
 }
 
-/************************ Add to Cart Buttons **************/
+#header {
+  max-width: 100%;
+  height: 300px;
+  border-radius: 0;
+
+}
+
+/************************ Cart Buttons **************/
+
+#muffbtn-1, #muffbtn-2, #muffbtn-3 {
+  margin-left: 40%;
+  margin-top: 10%;
+  background-color: rgba(249, 249, 249, 0.86);
+  border-radius: 5px;
+  z-index: 3;
+}
 
 #cookbtn-1, #cookbtn-2 {
   margin-left: 40%;
   margin-top: 10%;
-  background-color: blue;
+  background-color: rgba(249, 249, 249, 0.86);
   border-radius: 5px;
 }
 
 #cookbtn-3 {
   margin-left: 40%;
   margin-top: 12%;
-  background-color: blue;
+  background-color: rgba(249, 249, 249, 0.86);
   border-radius: 5px;
 }
 
 #cupbtn-1, #cupbtn-2 {
   margin-left: 40%;
   margin-top: 10%;
-  background-color: blue;
+  background-color: rgba(249, 249, 249, 0.86);
   border-radius: 5px;
+  z-index: 3;
 }
 
 #cupbtn-3 {
   margin-left: 40%;
   margin-top: 7%;
-  background-color: blue;
+  background-color: rgba(249, 249, 249, 0.86);
   border-radius: 5px;
+  z-index: 3;
 }
