--- a/views/home.erb
+++ b/views/home.erb
@@ -1,5 +1,6 @@
 <title>Corner Bakery</title>
 
+<!------------------------- Header Image ----------------------->
 <div class="card bg-dark text-white">
   <img id="header" class="card-img" src="/images/header.jpeg" alt="Card image">
   <div class="card-img-overlay">
@@ -8,7 +9,7 @@
   </div>
 </div>
 
-<!--------------- Catagories Grid ------------------>
+<!------------------------- Categories Grid --------------------------->
 
 <h1 style="text-align:center">Baked Goods</h1>
 
