created home image grid + styling

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -37,7 +37,7 @@
 
 <!--- Nav Bar Items -->
     <div class="col-sm">
-        <h5 class="menu">Explore</h5>
+        <h5 class="menu-head">Explore</h5>
       <ul>
         <li class="home-foot"><a href="home">Home</a></li>
         <li class="about-foot"><a href="about_us">About Us</a></li>
@@ -49,7 +49,7 @@
 
 <!--- Social Media Icons -->
     <div class="col-sm" style="margin-right:50px">
-        <h5 class="social">Stay Connected</h5>
+        <h5 class="social-head">Stay Connected</h5>
 
       <ul class="sm-icons">
 
@@ -70,12 +70,12 @@
 
 <!--- Newsletter Form -->
     <div class="col-sm">
-         <h3 class="newsletter">Newsletter</h3>
-      <form class="form-inline news-form" action="/welcome" method="post">
+         <h3 class="newsletter-head">Newsletter</h3>
+      <form class="form-inline news-form" action="/email" method="post">
 
          <div class="form-group mx-sm-2 mb-2">
            <label for="email" class="sr-only"></label>
-          <input type="email" class="form-control" id="inputPassword2" placeholder="Enter Your Email">
+          <input type="email" name="email" class="form-control" placeholder="Enter Your Email">
          </div>
          <input type="submit" class="outline" value="Submit">
      </form>
