--- a/public/main.css
+++ b/public/main.css
@@ -22,7 +22,33 @@ a:hover {
   text-decoration: none;
   color: #694E34;
 }
+/************************ Home Image Grid ***************/
 
+.home-grid {
+  margin-top: 10%;
+
+}
+
+#cup-img, #muff-img, #cook-img {
+  height: 65%;
+  border-radius: 0;
+}
+
+#cook-img {
+  width: 150%;
+}
+
+.cup-col {
+  right: 0%;
+}
+
+.cook-col {
+  right: 4%;
+}
+
+.muff-col {
+  left: 3.8%;
+}
 /************************** Footer *************************/
 
 .container-fluid {
@@ -31,7 +57,7 @@ a:hover {
 
 }
 
-.menu {
+.menu-head {
   margin-left: 39%;
   margin-top: 3%;
   color: #E8AD74;
@@ -53,7 +79,7 @@ li a:hover {
     color: #E8AD74;
 }
 
-.social {
+.social-head {
   margin-left: 40%;
   margin-top: 3%;
   color: #E8AD74;
@@ -65,7 +91,7 @@ li a:hover {
   margin-top: 10%;
 }
 
-.newsletter {
+.newsletter-head {
   margin-left: 23%;
   margin-top: 3%;
   color: #E8AD74;
@@ -91,7 +117,6 @@ li a:hover {
 }
 
 
-
 /************************ Item Images ******************/
 
 img {
@@ -101,8 +126,11 @@ img {
 #header {
   max-width: 100%;
   height: 300px;
-  border-radius: 0;
 
+}
+
+.card {
+  border-radius: 0;
 }
 
 /************************ Cart Buttons ******************/
