added more styling to home grid and successfully created the newsletter email functionality

--- a/views/home.erb
+++ b/views/home.erb
@@ -16,15 +16,29 @@
 <h1 style="text-align:center">Baked Goods</h1>
 
 <div class="container home-grid">
+
   <div class="row">
+    
     <div class="col-lg-4 cup-col">
-      <img id="cup-img"  src="/images/cupcakes-home.jpeg" alt="">
+      <a href="cupcakes">
+        <img id="cup-img" src="/images/cupcakes-home.jpeg" alt="">
+        <h2 class="cup-text">CUPCAKES</h2>
+      </a>
     </div>
+
     <div class="col-lg-3 cook-col">
-      <img id="cook-img" src="/images/cookies-home.jpeg" alt="">
+      <a href="cookies">
+        <img id="cook-img" src="/images/cookies-home.jpeg" alt="">
+        <h2 class="cook-text">COOKIES</h2>
+      </a>
     </div>
+
     <div class="col-lg-5 muff-col">
-      <img id="muff-img" src="/images/muffins-home.jpeg" alt="">
+      <a href="muffins">
+        <img id="muff-img" src="/images/muffins-home.jpeg" alt="">
+        <h2 class="muff-text">MUFFINS</h2>
+      </a>
+
     </div>
   </div>
 </div>
