--- a/public/main.css
+++ b/public/main.css
@@ -26,6 +26,7 @@ a:hover {
 
 .home-grid {
   margin-top: 10%;
+  margin-left: 12%;
 
 }
 
@@ -38,16 +39,50 @@ a:hover {
   width: 150%;
 }
 
+.cup-text, .cook-text, .muff-text {
+  position: absolute;
+  top: 30%;
+  color: #fcfbfa;
+}
+
+.cup-text {
+  right: 25%;
+}
+
+.cook-text {
+  right: 3%;
+}
+
+.muff-text {
+  right: 38%;
+}
+
 .cup-col {
-  right: 0%;
+  right: 4.5%;
+  position: relative;
+}
+
+.cup-col:hover {
+  opacity: 0.5;
+  transition-duration: 0.7s;
 }
 
 .cook-col {
   right: 4%;
 }
 
+.cook-col:hover {
+  opacity: 0.5;
+  transition-duration: 0.7s;
+}
+
 .muff-col {
   left: 3.8%;
+}
+
+.muff-col:hover {
+  opacity: 0.5;
+  transition-duration: 0.7s;
 }
 /************************** Footer *************************/
 
@@ -103,7 +138,7 @@ li a:hover {
   margin-top: 20px;
 }
 
-.outline {
+.btn {
   color: #694E34;
   background-color: #E8AD74;
   border-color: #694E34;
@@ -112,7 +147,7 @@ li a:hover {
   margin-bottom: 5px;
 }
 
-.outline:hover {
+.btn:hover {
   background-color: #fcfbfa;
 }
 
