--- a/views/layout.erb
+++ b/views/layout.erb
@@ -48,7 +48,7 @@
     </div>
 
 <!--- Social Media Icons -->
-    <div class="col-sm" style="margin-right:50px">
+    <div class="col-sm" style="margin-right:100px">
         <h5 class="social-head">Stay Connected</h5>
 
       <ul class="sm-icons">
@@ -71,13 +71,13 @@
 <!--- Newsletter Form -->
     <div class="col-sm">
          <h3 class="newsletter-head">Newsletter</h3>
-      <form class="form-inline news-form" action="/email" method="post">
+      <form class="form-inline news-form" method="post">
 
          <div class="form-group mx-sm-2 mb-2">
-           <label for="email" class="sr-only"></label>
-          <input type="email" name="email" class="form-control" placeholder="Enter Your Email">
+           
+           <input type="email" name="email" class="form-control" placeholder="Enter Your Email">
          </div>
-         <input type="submit" class="outline" value="Submit">
+           <input type="submit" name="submit" class="btn" value="Submit">
      </form>
     </div>
    </div>
