--- a/views/home.erb
+++ b/views/home.erb
@@ -1,24 +1,22 @@
-
 <title>Corner Bakery</title>
 
 <!------------------------- Header Image ----------------------->
 
 <div class="card bg-dark text-white">
-  <img id="header" class="card-img" src="/images/header.jpeg" alt="Card image">
+    <img id="home-header" class="card-img" src="/images/header.jpeg" alt="Card image">
   <div class="card-img-overlay">
-    <h2 class="card-title" style="text-align:center">Corner Bakery</h2>
+    <img src="/images/logo.png" style="margin-left:80%; margin-top:-10px" alt="">
 
   </div>
 </div>
 
 <!------------------------- Home Image Grid --------------------------->
 
-<h1 style="text-align:center">Baked Goods</h1>
 
 <div class="container home-grid">
 
   <div class="row">
-    
+
     <div class="col-lg-4 cup-col">
       <a href="cupcakes">
         <img id="cup-img" src="/images/cupcakes-home.jpeg" alt="">
