created newsletter template + some styling, MVP status reached but will plan to tune up the website

--- a/newsletter/welcome.html.erb
+++ b/newsletter/welcome.html.erb
@@ -1,1 +1,62 @@
-<h1>Hola</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Catalog</title>
+
+  <style>
+    #main-header {
+       background: url('https://ak9.picdn.net/shutterstock/videos/23945149/thumb/9.jpg') no-repeat center;
+       background: cover;
+       min-height: 320px;
+       position: relative;
+   }
+
+   h1 {
+      color: #E8AD74;
+      margin-left: 25px;
+   }
+
+   h2 {
+     color: #E8AD74;
+     text-align: center;
+   }
+
+   h3 {
+     color: #694E34;
+   }
+
+  </style>
+  </head>
+<body>
+
+  <header id="main-header">
+      <h1>CORNER BAKERY</h1>
+  </header>
+
+<h3>COOKIES</h3>
+  <ul class="cookies">
+     <li>Dulce de Leche: $1.99</li>
+     <li>Soft Chocolate Chip: $1.99</li>
+     <li>Peanut Butter: $1.99</li>
+  </ul>
+
+<h3>MUFFINS</h3>
+  <ul class="muffins">
+     <li>Blueberry: $2.99</li>
+     <li>Cinnamon: $2.99</li>
+     <li>Peanut Butter Banana: $2.99</li>
+  </ul>
+
+<h3>CUPCAKES</h3>
+  <ul class="cupcakes">
+     <li>Red Velvet: $2.99</li>
+     <li>Carrot: $2.99</li>
+     <li>Cheesecake: $2.99</li>
+  </ul>
+
+  <h2>YOUR SWEET TOOTH WILL THANK YOU LATER!</h2>
+
+
+  </body>
+</html>
