--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,16 +8,13 @@
 </head>
   <body>
 
-
-
-
 <!------------------------------ Nav Bar ----------------------->
 
 <section>
     <div class="pos-f-t">
       <div class="collapse" id="navbarToggleExternalContent">
         <div class="p-4">
-          <span class="home"><a href="home">Home</a></span>
+          <span class="home"><a href="/">Home</a></span>
           <span class="about"><a href="about_us">About Us</a></span>
           <span class="cookies"><a href="cookies">Cookies</a></span>
           <span class="muffins"><a href="muffins">Muffins</a></span>
