--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -6,7 +6,7 @@
     <header id="cook-header" class="card-img"></header>
   <div class="card-img-overlay">
     <img src="/images/logo.png" style="margin-left:80%; margin-top:-10px" alt="">
-
+    <h1 class="cook-types tracking-in-expand-fwd-top">COOKIES</h1>
   </div>
 </div>
 
