--- a/views/home.erb
+++ b/views/home.erb
@@ -7,7 +7,7 @@
     <img id="home-header" class="card-img" src="/images/header.jpeg" alt="Card image">
   <div class="card-img-overlay">
     <img src="/images/logo.png" style="margin-left:80%; margin-top:-10px" alt="">
-
+    <h2 class="cate-types tracking-in-contract-bck ">CATEGORIES</h2>
   </div>
 </div>
 
