--- a/views/cupcakes.erb
+++ b/views/cupcakes.erb
@@ -6,7 +6,7 @@
     <header id="cup-header" class="card-img"></header>
   <div class="card-img-overlay">
     <img src="/images/logo.png" style="margin-left:80%; margin-top:-10px" alt="">
-
+    <h1 class="cup-types tracking-in-expand-fwd">CUPCAKES</h1>
   </div>
 </div>
 
