--- a/views/muffins.erb
+++ b/views/muffins.erb
@@ -6,6 +6,7 @@
     <header id="muff-header" class="card-img"></header>
     <div class="card-img-overlay">
     <img src="/images/logo.png" style="margin-left:80%; margin-top:-10px" alt="">
+    <h1 class="muff-types tracking-in-contract-bck-top">MUFFINS</h1>
    </div>
 </div>
 
