--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -1,43 +1,50 @@
-<title>Cookies</title>
+  <title>Cookies</title>
 
-<!------------------------- Header Image ----------------------->
+  <!------------------------- Header Image ----------------------->
 
 <div class="card bg-dark text-white">
-    <header id="cook-header" class="card-img"></header>
+      <header id="cook-header" class="card-img"></header>
   <div class="card-img-overlay">
-    <img src="/images/logo.png" style="margin-left:80%; margin-top:-10px" alt="">
-    <h1 class="cook-types tracking-in-expand-fwd-top">COOKIES</h1>
+      <img src="/images/logo.png" style="margin-left:80%; margin-top:-10px" alt="">
+      <h1 class="cook-types tracking-in-expand-fwd-top">COOKIES</h1>
+  </div>
+
+</div>
+
+  <!------------------------- Item Z-layout ----------------------->
+
+<!-- COOKIE-1 -->
+
+<div class="media mt-5" style="color:#694E34;">
+      <img class="ml-5" src="<%= @dulce_cook.image %>" style="width:33%; height:300px" alt="Dulce de Leche">
+  <div class="media-body" style="color:#694E34;">
+      <h3 class="mt-0 ml-2 mb-4"><%= @dulce_cook.name %></h3>
+      <h5 class="ml-2">$<%= @dulce_cook.price %></h5>
+      <p class="ml-2"><%= @dulce_cook.description %></p>
+      <button id="cookbtn-1" type="button" name="button">Add to Cart</button>
   </div>
 </div>
 
-<!------------------------- Items Z-layout ----------------------->
+<!-- COOKIE-2 -->
 
 <div class="media mt-5" style="color:#694E34;">
-  <img class="ml-5" src="<%= @dulce_cook.image %>" style="width:33%; height:300px" alt="Dulce de Leche">
   <div class="media-body" style="color:#694E34;">
-    <h3 class="mt-0 ml-2 mb-4"><%= @dulce_cook.name %></h3>
-    <h5 class="ml-2">$<%= @dulce_cook.price %></h5>
-    <p class="ml-2"><%= @dulce_cook.description %></p>
-    <button id="cookbtn-1" type="button" name="button">Add to Cart</button>
+      <h3 class="mt-0 mb-4 ml-5"><%= @choco_chip.name %></h3>
+      <h5 class="ml-5">$<%= @choco_chip.price %></h5>
+      <p class="ml-5"><%= @choco_chip.description %></p>
+      <button id="cookbtn-2" type="button" name="button">Add to Cart</button>
   </div>
+      <img class="mr-4" src="<%= @choco_chip.image %>" style="width:33%; height:300px" alt="Chocolate Chip">
 </div>
 
-<div class="media mt-5" style="color:#694E34;">
-  <div class="media-body" style="color:#694E34;">
-    <h3 class="mt-0 mb-4 ml-5"><%= @choco_chip.name %></h3>
-    <h5 class="ml-5">$<%= @choco_chip.price %></h5>
-    <p class="ml-5"><%= @choco_chip.description %></p>
-    <button id="cookbtn-2" type="button" name="button">Add to Cart</button>
-  </div>
-  <img class="mr-4" src="<%= @choco_chip.image %>" style="width:33%; height:300px" alt="Chocolate Chip">
-</div>
+<!-- COOKIE-3 -->
 
 <div class="media mt-5" style="color:#694E34;">
-  <img class="ml-5 mb-3" src="<%= @peanut_cook.image %>" style="width:33%; height:300px" alt="Peanut Butter">
+      <img class="ml-5 mb-3" src="<%= @peanut_cook.image %>" style="width:33%; height:300px" alt="Peanut Butter">
   <div class="media-body" style="color:#694E34;">
-    <h3 class="mt-0 ml-2 mb-4"><%= @peanut_cook.name %></h3>
-    <h5 class="ml-2">$<%= @peanut_cook.price %></h5>
-    <p class="ml-2"><%= @peanut_cook.description %></p>
-    <button id="cookbtn-3" type="button" name="button">Add to Cart</button>
+      <h3 class="mt-0 ml-2 mb-4"><%= @peanut_cook.name %></h3>
+      <h5 class="ml-2">$<%= @peanut_cook.price %></h5>
+      <p class="ml-2"><%= @peanut_cook.description %></p>
+      <button id="cookbtn-3" type="button" name="button">Add to Cart</button>
   </div>
 </div>
