--- a/views/home.erb
+++ b/views/home.erb
@@ -52,8 +52,7 @@
 
     <div class="col-sm-2">
       <img class="staff1" src="https://img-aws.ehowcdn.com/340x221p/photos.demandstudios.com/getty/article/165/9/92861246.jpg" alt="">
-      <h3 style="margin-left:85px; margin-top:20%">
-            Senior Baker</h3>
+      <h3 style="margin-left:85px; margin-top:20%">Senior Baker</h3>
       <h5 style="margin-left:70%; color:#E8AD74">Lorem</h5>
     </div>
 
@@ -61,12 +60,12 @@
       <img class="staff2" src="https://hotbreadkitchen.org/wp-content/uploads/2015/09/Baker-Headshots_4.1917_0039-e1497541352872-300x300.jpg" alt="">
       <h3 style="margin-left:130%; margin-top:10%;">Master Baker</h3>
       <h5 style="margin-left:133%; color:#E8AD74">Ipsum<h5>
-    </div>
+      </div>
 
-    <div class="col-sm-3">
-      <img class="staff3 "src="https://hips.hearstapps.com/del.h-cdn.co/assets/cm/15/10/54f63aeb7d70f_-_alonzo_julian-xl.jpg" alt="">
-      <h3 style="margin-left:180%; margin-top:12%; padding-right:7%">Senior Baker</h3>
-      <h5 style="margin-left:180%; color:#E8AD74">Dolorem</h5>
+      <div class="col-sm-3">
+        <img class="staff3 "src="https://hips.hearstapps.com/del.h-cdn.co/assets/cm/15/10/54f63aeb7d70f_-_alonzo_julian-xl.jpg" alt="">
+        <h3 style="margin-left:180%; margin-top:12%; padding-right:7%">Senior Baker</h3>
+        <h5 style="margin-left:180%; color:#E8AD74">Dolorem</h5>
+      </div>
     </div>
   </div>
-</div>
