fixed some spacing for semantics

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,12 +21,12 @@
           <span class="cupcakes"><a href="cupcakes">Cupcakes</a></span>
         </div>
       </div>
-      <nav id="nav" class="navbar navbar-dark">
-        <button id="menu-btn" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <nav id="nav" class="navbar navbar-dark">
+          <button id="menu-btn" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
-      </nav>
-    </div>
+          </button>
+        </nav>
+   </div>
 <section>
 
 <!------------------------------ Footer ------------------------------>
@@ -50,40 +50,27 @@
 <!--- Social Media Icons -->
     <div class="col-sm" style="margin-right:100px">
         <h5 class="social-head">Stay Connected</h5>
-
       <ul class="sm-icons">
-
-        <li class="icon-item">
-          <a href=""><img src="/images/instagram-32.png"></a>
-        </li>
-
-        <li class="icon-item">
-          <a href=""><img src="/images/facebook-3-32.png"></a>
-        </li>
-
-        <li class="icon-item">
-            <a href=""><img src="/images/twitter-3-32.png"></a>
-        </li>
-
+        <li class="icon-item"><a href=""><img src="/images/instagram-32.png"></a></li>
+        <li class="icon-item"><a href=""><img src="/images/facebook-3-32.png"></a></li>
+        <li class="icon-item"><a href=""><img src="/images/twitter-3-32.png"></a></li>
       </ul>
     </div>
 
 <!--- Newsletter Form -->
 
     <div class="col-sm">
-         <h3 class="newsletter-head">Newsletter</h3>
+           <h3 class="newsletter-head">Newsletter</h3>
       <form class="form-inline news-form" method="post">
-
-         <div class="form-group mx-sm-2 mb-2">
-
+      <div class="form-group mx-sm-2 mb-2">
            <input type="email" name="email" class="form-control" placeholder="Enter Your Email">
-         </div>
+      </div>
            <input type="submit" name="submit" class="btn" value="Submit">
-     </form>
+      </form>
     </div>
+
    </div>
  </div>
-
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
